--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,7 @@
     <!-- javascripts -->
     <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")"></script>
     <script src="@routes.Assets.versioned("lib/github-com-raryosu-Rin/dist/js/bootstrap.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/font-awesome/js/all.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/main.js")"></script>
     @additionalCodes
 
@@ -40,7 +41,7 @@
                 <a class="navbar-brand" href="@routes.CommonController.index()">
                     <span class="fa-layers fa-fw">
                         <i class="fas fa-square" style="color:yellow"></i>
-                        <i class="fa-inverse fas fa-paw text-header-color"data-fa-transform="shrink-6"></i>
+                        <i class="fa-inverse fas fa-paw text-header-color" data-fa-transform="shrink-6"></i>
                     </span>
                     @Configurations.APPLICATION_NAME
                 </a>
